# quadruped-robot-12DOF-SMC-controller

./: README.md
Final Dog/Documents/: Algorithm_Math.md  Project_Analysis.md
Final Dog/Webots_Simulation/: quad_3dof_L123.py
Version/Version 2 (ROS2)/Documents/: ROS2_Webots_Usage_Guide.md
Version/Version 2 (ROS2)/MATLAB_Scripts/: realtime_dashboard.m
Version/Version 2 (ROS2)/ROS2_Bridge/: ros2_udp_bridge.py
quadruped_ros2/: README.md
quadruped_ros2/Documents/: Euler_Lagrange_Derivation.md
quadruped_ros2/Webots_Simulation/: .quad_3dof_L1L2L3_4legs.wbproj
quadruped_ros2/Webots_Simulation/worlds/: quad_3dof_L1L2L3_4legs.wbt
ros2_ws/: .gitignore  README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build  latest_test
ros2_ws/src/quadruped_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/quadruped_ros2/config/: ros2_controllers.yaml
ros2_ws/src/quadruped_ros2/launch/: quadruped_webots.launch.py
ros2_ws/src/quadruped_ros2/quadruped_ros2/: analyze_joint_log.py  bezier_utils.py  desired_state.py  gait_controller.py  gait_planner.py  hybrid_command.py  joint_monitor.py  joint_plotter.py  joint_state_reader.py  kinematics.py  main.py  odem_tracker.py  pose_commander.py  robot_config.py  smc_math.py
ros2_ws/src/quadruped_ros2/urdf/: quadruped_webots.urdf
ros2_ws/src/quadruped_ros2/worlds/: .quad_3dof_L1L2L3_4legs.wbproj  quad_3dof_L1L2L3_4legs.wbt
ver/ver1/MATLAB_Scripts/: plot_trajectory.m
ver/ver2_ros2/Documents/: Analyzing Robot Project Files.md
ver/ver2_ros2/MATLAB_Scripts/: smc_dashboard.m
(+36 files in other folders)
