<?xml version="1.0"?>
<package format="3">
  <name>quadruped_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 Webots interface for 12-DOF quadruped robot</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
